agrest-engine/src/main/java/io/agrest/exp/parser/AgExpressionParser.java
/* AgExpressionParser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. AgExpressionParser.java */
package io.agrest.exp.parser;

// note: Parser doesn't use this import, but it's shared with the TokenManager
import java.math.BigDecimal;
import java.math.BigInteger;

import io.agrest.AgException;

/**
  * Parser of AgRest Expressions.
  *
  * @since 5.0
  */
public class AgExpressionParser/*@bgen(jjtree)*/implements AgExpressionParserTreeConstants, AgExpressionParserConstants {/*@bgen(jjtree)*/
  protected JJTAgExpressionParserState jjtree = new JJTAgExpressionParserState();
    public static SimpleNode parse(String expressionString) {
        try {
            AgExpressionParser parser = new AgExpressionParser(expressionString);
            return parser.expression();
        } catch (ParseException e) {
            throw AgException.badRequest(e, e.getMessage());
        }
        catch (TokenMgrException e) {
            throw AgException.badRequest(e, e.getMessage());
        }
    }

  final public SimpleNode expression() throws ParseException {
    orCondition();
    jj_consume_token(0);
return (SimpleNode) jjtree.rootNode();
}

  final public void orCondition() throws ParseException {
ExpOr jjtn001 = new ExpOr(JJTOR);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
    try {
      andCondition();
      label_1:
      while (true) {
        switch (jj_nt.kind) {
        case 1:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        jj_consume_token(1);
        andCondition();
      }
    } catch (Throwable jjte001) {
if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
    } finally {
if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
          }
    }
}

  final public void andCondition() throws ParseException {
ExpAnd jjtn001 = new ExpAnd(JJTAND);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
    try {
      notCondition();
      label_2:
      while (true) {
        switch (jj_nt.kind) {
        case 2:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        jj_consume_token(2);
        notCondition();
      }
    } catch (Throwable jjte001) {
if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
    } finally {
if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
          }
    }
}

  final public void notCondition() throws ParseException {
    switch (jj_nt.kind) {
    case 3:
    case 4:{
      switch (jj_nt.kind) {
      case 3:{
        jj_consume_token(3);
        break;
        }
      case 4:{
        jj_consume_token(4);
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
ExpNot jjtn001 = new ExpNot(JJTNOT);
                                  boolean jjtc001 = true;
                                  jjtree.openNodeScope(jjtn001);
      try {
        simpleCondition();
      } catch (Throwable jjte001) {
if (jjtc001) {
                                    jjtree.clearNodeScope(jjtn001);
                                    jjtc001 = false;
                                  } else {
                                    jjtree.popNode();
                                  }
                                  if (jjte001 instanceof RuntimeException) {
                                    {if (true) throw (RuntimeException)jjte001;}
                                  }
                                  if (jjte001 instanceof ParseException) {
                                    {if (true) throw (ParseException)jjte001;}
                                  }
                                  {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                                    jjtree.closeNodeScope(jjtn001,  1);
                                  }
      }
      break;
      }
    case 17:
    case 26:
    case 27:
    case 30:
    case NULL:
    case TRUE:
    case FALSE:
    case CONCAT:
    case SUBSTRING:
    case TRIM:
    case LOWER:
    case UPPER:
    case LENGTH:
    case LOCATE:
    case ABS:
    case SQRT:
    case MOD:
    case CURRENT_DATE:
    case CURRENT_TIME:
    case CURRENT_TIMESTAMP:
    case YEAR:
    case MONTH:
    case WEEK:
    case DAY_OF_YEAR:
    case DAY:
    case DAY_OF_MONTH:
    case DAY_OF_WEEK:
    case HOUR:
    case MINUTE:
    case SECOND:
    case NAMED_PARAMETER:
    case PROPERTY_PATH:
    case SINGLE_QUOTED_STRING:
    case DOUBLE_QUOTED_STRING:
    case INT_LITERAL:
    case FLOAT_LITERAL:{
      simpleCondition();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void simpleCondition() throws ParseException {// variable arity for the Like nodes
    int arity = 2;
    switch (jj_nt.kind) {
    case TRUE:{
ExpTrue jjtn001 = new ExpTrue(JJTTRUE);
            boolean jjtc001 = true;
            jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(TRUE);
      } finally {
if (jjtc001) {
              jjtree.closeNodeScope(jjtn001, true);
            }
      }
      break;
      }
    case FALSE:{
ExpFalse jjtn002 = new ExpFalse(JJTFALSE);
            boolean jjtc002 = true;
            jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(FALSE);
      } finally {
if (jjtc002) {
              jjtree.closeNodeScope(jjtn002, true);
            }
      }
      break;
      }
    case 17:
    case 26:
    case 27:
    case 30:
    case NULL:
    case CONCAT:
    case SUBSTRING:
    case TRIM:
    case LOWER:
    case UPPER:
    case LENGTH:
    case LOCATE:
    case ABS:
    case SQRT:
    case MOD:
    case CURRENT_DATE:
    case CURRENT_TIME:
    case CURRENT_TIMESTAMP:
    case YEAR:
    case MONTH:
    case WEEK:
    case DAY_OF_YEAR:
    case DAY:
    case DAY_OF_MONTH:
    case DAY_OF_WEEK:
    case HOUR:
    case MINUTE:
    case SECOND:
    case NAMED_PARAMETER:
    case PROPERTY_PATH:
    case SINGLE_QUOTED_STRING:
    case DOUBLE_QUOTED_STRING:
    case INT_LITERAL:
    case FLOAT_LITERAL:{
      conditionExpression();
      switch (jj_nt.kind) {
      case 3:
      case 4:
      case 5:
      case 6:
      case 7:
      case 8:
      case 9:
      case 10:
      case 11:
      case 12:
      case 13:
      case 15:
      case 16:
      case 19:{
        switch (jj_nt.kind) {
        case 5:
        case 6:{
          switch (jj_nt.kind) {
          case 5:{
            jj_consume_token(5);
            break;
            }
          case 6:{
            jj_consume_token(6);
            break;
            }
          default:
            jj_la1[4] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
ExpEqual jjtn003 = new ExpEqual(JJTEQUAL);
                          boolean jjtc003 = true;
                          jjtree.openNodeScope(jjtn003);
          try {
            scalarExpression();
          } catch (Throwable jjte003) {
if (jjtc003) {
                            jjtree.clearNodeScope(jjtn003);
                            jjtc003 = false;
                          } else {
                            jjtree.popNode();
                          }
                          if (jjte003 instanceof RuntimeException) {
                            {if (true) throw (RuntimeException)jjte003;}
                          }
                          if (jjte003 instanceof ParseException) {
                            {if (true) throw (ParseException)jjte003;}
                          }
                          {if (true) throw (Error)jjte003;}
          } finally {
if (jjtc003) {
                            jjtree.closeNodeScope(jjtn003,  2);
                          }
          }
          break;
          }
        case 7:
        case 8:{
          switch (jj_nt.kind) {
          case 7:{
            jj_consume_token(7);
            break;
            }
          case 8:{
            jj_consume_token(8);
            break;
            }
          default:
            jj_la1[5] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
ExpNotEqual jjtn004 = new ExpNotEqual(JJTNOTEQUAL);
                           boolean jjtc004 = true;
                           jjtree.openNodeScope(jjtn004);
          try {
            scalarExpression();
          } catch (Throwable jjte004) {
if (jjtc004) {
                             jjtree.clearNodeScope(jjtn004);
                             jjtc004 = false;
                           } else {
                             jjtree.popNode();
                           }
                           if (jjte004 instanceof RuntimeException) {
                             {if (true) throw (RuntimeException)jjte004;}
                           }
                           if (jjte004 instanceof ParseException) {
                             {if (true) throw (ParseException)jjte004;}
                           }
                           {if (true) throw (Error)jjte004;}
          } finally {
if (jjtc004) {
                             jjtree.closeNodeScope(jjtn004,  2);
                           }
          }
          break;
          }
        case 9:{
          jj_consume_token(9);
ExpLessOrEqual jjtn005 = new ExpLessOrEqual(JJTLESSOREQUAL);
                 boolean jjtc005 = true;
                 jjtree.openNodeScope(jjtn005);
          try {
            scalarExpression();
          } catch (Throwable jjte005) {
if (jjtc005) {
                   jjtree.clearNodeScope(jjtn005);
                   jjtc005 = false;
                 } else {
                   jjtree.popNode();
                 }
                 if (jjte005 instanceof RuntimeException) {
                   {if (true) throw (RuntimeException)jjte005;}
                 }
                 if (jjte005 instanceof ParseException) {
                   {if (true) throw (ParseException)jjte005;}
                 }
                 {if (true) throw (Error)jjte005;}
          } finally {
if (jjtc005) {
                   jjtree.closeNodeScope(jjtn005,  2);
                 }
          }
          break;
          }
        case 10:{
          jj_consume_token(10);
ExpLess jjtn006 = new ExpLess(JJTLESS);
                boolean jjtc006 = true;
                jjtree.openNodeScope(jjtn006);
          try {
            scalarExpression();
          } catch (Throwable jjte006) {
if (jjtc006) {
                  jjtree.clearNodeScope(jjtn006);
                  jjtc006 = false;
                } else {
                  jjtree.popNode();
                }
                if (jjte006 instanceof RuntimeException) {
                  {if (true) throw (RuntimeException)jjte006;}
                }
                if (jjte006 instanceof ParseException) {
                  {if (true) throw (ParseException)jjte006;}
                }
                {if (true) throw (Error)jjte006;}
          } finally {
if (jjtc006) {
                  jjtree.closeNodeScope(jjtn006,  2);
                }
          }
          break;
          }
        case 11:{
          jj_consume_token(11);
ExpGreater jjtn007 = new ExpGreater(JJTGREATER);
                 boolean jjtc007 = true;
                 jjtree.openNodeScope(jjtn007);
          try {
            scalarExpression();
          } catch (Throwable jjte007) {
if (jjtc007) {
                   jjtree.clearNodeScope(jjtn007);
                   jjtc007 = false;
                 } else {
                   jjtree.popNode();
                 }
                 if (jjte007 instanceof RuntimeException) {
                   {if (true) throw (RuntimeException)jjte007;}
                 }
                 if (jjte007 instanceof ParseException) {
                   {if (true) throw (ParseException)jjte007;}
                 }
                 {if (true) throw (Error)jjte007;}
          } finally {
if (jjtc007) {
                   jjtree.closeNodeScope(jjtn007,  2);
                 }
          }
          break;
          }
        case 12:{
          jj_consume_token(12);
ExpGreaterOrEqual jjtn008 = new ExpGreaterOrEqual(JJTGREATEROREQUAL);
                 boolean jjtc008 = true;
                 jjtree.openNodeScope(jjtn008);
          try {
            scalarExpression();
          } catch (Throwable jjte008) {
if (jjtc008) {
                   jjtree.clearNodeScope(jjtn008);
                   jjtc008 = false;
                 } else {
                   jjtree.popNode();
                 }
                 if (jjte008 instanceof RuntimeException) {
                   {if (true) throw (RuntimeException)jjte008;}
                 }
                 if (jjte008 instanceof ParseException) {
                   {if (true) throw (ParseException)jjte008;}
                 }
                 {if (true) throw (Error)jjte008;}
          } finally {
if (jjtc008) {
                   jjtree.closeNodeScope(jjtn008,  2);
                 }
          }
          break;
          }
        case 13:{
          jj_consume_token(13);
          scalarExpression();
ExpLike jjtn009 = new ExpLike(JJTLIKE);
                                      boolean jjtc009 = true;
                                      jjtree.openNodeScope(jjtn009);
          try {
            switch (jj_nt.kind) {
            case 14:{
              jj_consume_token(14);
              stringLiteral();
arity = 3;
              break;
              }
            default:
              jj_la1[6] = jj_gen;
              ;
            }
          } catch (Throwable jjte009) {
if (jjtc009) {
                                        jjtree.clearNodeScope(jjtn009);
                                        jjtc009 = false;
                                      } else {
                                        jjtree.popNode();
                                      }
                                      if (jjte009 instanceof RuntimeException) {
                                        {if (true) throw (RuntimeException)jjte009;}
                                      }
                                      if (jjte009 instanceof ParseException) {
                                        {if (true) throw (ParseException)jjte009;}
                                      }
                                      {if (true) throw (Error)jjte009;}
          } finally {
if (jjtc009) {
                                        jjtree.closeNodeScope(jjtn009,  arity);
                                      }
          }
          break;
          }
        case 15:{
          jj_consume_token(15);
          scalarExpression();
ExpLikeIgnoreCase jjtn010 = new ExpLikeIgnoreCase(JJTLIKEIGNORECASE);
                                                 boolean jjtc010 = true;
                                                 jjtree.openNodeScope(jjtn010);
          try {
            switch (jj_nt.kind) {
            case 14:{
              jj_consume_token(14);
              stringLiteral();
arity = 3;
              break;
              }
            default:
              jj_la1[7] = jj_gen;
              ;
            }
          } catch (Throwable jjte010) {
if (jjtc010) {
                                                   jjtree.clearNodeScope(jjtn010);
                                                   jjtc010 = false;
                                                 } else {
                                                   jjtree.popNode();
                                                 }
                                                 if (jjte010 instanceof RuntimeException) {
                                                   {if (true) throw (RuntimeException)jjte010;}
                                                 }
                                                 if (jjte010 instanceof ParseException) {
                                                   {if (true) throw (ParseException)jjte010;}
                                                 }
                                                 {if (true) throw (Error)jjte010;}
          } finally {
if (jjtc010) {
                                                   jjtree.closeNodeScope(jjtn010,  arity);
                                                 }
          }
          break;
          }
        case 16:{
          jj_consume_token(16);
ExpIn jjtn011 = new ExpIn(JJTIN);
                 boolean jjtc011 = true;
                 jjtree.openNodeScope(jjtn011);
          try {
            switch (jj_nt.kind) {
            case NAMED_PARAMETER:{
              namedParameter();
              break;
              }
            case 17:{
              jj_consume_token(17);
              scalarCommaList();
              jj_consume_token(18);
              break;
              }
            default:
              jj_la1[8] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          } catch (Throwable jjte011) {
if (jjtc011) {
                   jjtree.clearNodeScope(jjtn011);
                   jjtc011 = false;
                 } else {
                   jjtree.popNode();
                 }
                 if (jjte011 instanceof RuntimeException) {
                   {if (true) throw (RuntimeException)jjte011;}
                 }
                 if (jjte011 instanceof ParseException) {
                   {if (true) throw (ParseException)jjte011;}
                 }
                 {if (true) throw (Error)jjte011;}
          } finally {
if (jjtc011) {
                   jjtree.closeNodeScope(jjtn011,  2);
                 }
          }
          break;
          }
        case 19:{
          jj_consume_token(19);
          scalarExpression();
          jj_consume_token(2);
ExpBetween jjtn012 = new ExpBetween(JJTBETWEEN);
                                                boolean jjtc012 = true;
                                                jjtree.openNodeScope(jjtn012);
          try {
            scalarExpression();
          } catch (Throwable jjte012) {
if (jjtc012) {
                                                  jjtree.clearNodeScope(jjtn012);
                                                  jjtc012 = false;
                                                } else {
                                                  jjtree.popNode();
                                                }
                                                if (jjte012 instanceof RuntimeException) {
